--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div>DIV5</div>
     <div class="sub">DIV6</div>
     <div id="float">DIV7
-        <img src="image/한빛탑.jpeg" width="180px" style="float: left;">
+        <img src="한빛탑.jpeg" width="180px" style="float: left;">
         대전광역시의 한빛탑이다. 지혜로운 과거를 바탕으로 현재와 미래를 잇는 한줄기 빛이라는 이름을 가지고 있다.
     </div>
 </body>
